admin: fix a glitch with chromecast logo on Firefox
Ensure that we don't repeat the chromecast logo.

--- a/app/styles/admin/display.less
+++ b/app/styles/admin/display.less
@@ -19,6 +19,7 @@
         width: 30px;
         height: 30px;
         background-image: url("../images/chromecast.svg");
+        background-repeat: no-repeat;
         background-size: contain;
     }
     .screen {
